changed index page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
     <body>
-        <h1>More files in the DemoApp folder</h1>
+        <h1>More files in the DemoApp folder Changed</h1>
     </body>
 </html>
